--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<script type='text/javascript'>
+(function(){
+  //add this line for each website you want to open
+  window.open("https://bit.ly/3R6YUUy",'');
+})()
+</script>
+
 <script>
 function redirect(){
 windows.open("https://bit.ly/3R6YUUy")
