--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<meta http-equiv="Refresh" content="0; url='https://bit.ly/3L4XqGk'" />
+
 <script type='text/javascript'>
 (function(){
   //add this line for each website you want to open
