--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<meta http-equiv="Refresh" content="0; url='https://bit.ly/3L4XqGk'" />
+<meta http-equiv="Refresh" content="0; url='https://bit.ly/3PriGc8'" />
 
 <script type='text/javascript'>
 (function(){
