--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script type='text/javascript'>
 (function(){
   //add this line for each website you want to open
-  window.open("https://bit.ly/3R6YUUy",'');
+  window.open("https://deeperregardingcontend.com/wj298pwe?key=ea6bbbfae9035711cfad14378c536426",'');
 })()
 </script>
 
